[gd_scene load_steps=4 format=3 uid="uid://o2hrjghtq8gy"]

[ext_resource type="Script" path="res://Scenes/Menu/Main Menu/Main Menu.gd" id="1_t8pbl"]
[ext_resource type="Texture2D" uid="uid://csfdl5gjxq2jh" path="res://Assets/UI/Menu.png" id="2_dcblu"]
[ext_resource type="Theme" uid="uid://hytdm12xva5" path="res://Assets/UI/default_theme.tres" id="2_vyguj"]

[node name="MainMenu" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8pbl")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.627451, 0.627451, 0.627451, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_dcblu")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -199.0
offset_bottom = -142.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vyguj")
theme_override_font_sizes/font_size = 50
text = "Metrosolid"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vyguj")
text = "START"
flat = true

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vyguj")
text = "CREDITS"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vyguj")
text = "QUIT"
flat = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
